Restructure getLongestSide method